# emerald-tablet-engine

./: README.md  commit.txt  et_full_log.txt  pyproject.toml
data/: emerald_tablet_etff.txt
docs/: cfg_tokens_3d.html  cfg_tokens_3d_barrel.html
emerald_tablet_engine/: __init__.py  callgraph.py  compiler.py  primitives.py  runtime.py  sectional.py
examples/: quickstart.py
programs/: animated_cfg_corpus.py  animated_cfg_tokens.py  animated_cfg_tokens_barrel.py  animated_cfg_tokens_top.py  bootstrap_explorer.py  cfg_tokens_3d.py  cfg_tokens_3d_barrel.py  cfg_tokens_sidebyside.py  ig_bridge.py  plot_cfg_document.py  plot_cfg_tokens.py  ra_apep.py  run_all.py  versicle_comparator.py
